<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.RegisterActivity">

    <include
        android:id="@+id/back_top_bar"
        layout="@layout/back_top_bar" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_content_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/content_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back_top_bar">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/ll_form_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:orientation="vertical"
                android:paddingTop="16dp"
                android:paddingBottom="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textSize="12sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tl_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxBackgroundColor="@color/white"
                    app:boxCornerRadiusBottomEnd="100dp"
                    app:boxCornerRadiusBottomStart="100dp"
                    app:boxCornerRadiusTopEnd="100dp"
                    app:boxCornerRadiusTopStart="100dp"
                    app:expandedHintEnabled="false"
                    app:placeholderText="@string/placeholder_here"
                    app:placeholderTextColor="@color/gray_20">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/sample_name"/>
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/tv_gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/gender"
                    android:textSize="12sp" />

                <RadioGroup
                    android:id="@+id/rg_gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/rb_male"
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:text="@string/male"
                        android:textSize="14sp"
                        android:checked="true"/>

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/rb_female"
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:layout_marginStart="16dp"
                        android:text="@string/female" />

                </RadioGroup>

                <TextView
                    android:id="@+id/tv_birth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/date_of_birth"
                    android:textSize="12sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tl_birth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxBackgroundColor="@color/white"
                    app:boxCornerRadiusBottomEnd="100dp"
                    app:boxCornerRadiusBottomStart="100dp"
                    app:boxCornerRadiusTopEnd="100dp"
                    app:boxCornerRadiusTopStart="100dp"
                    app:endIconDrawable="@drawable/ic_calendar"
                    app:endIconMode="custom"
                    app:expandedHintEnabled="false"
                    app:placeholderText="@string/placeholder_here"
                    app:placeholderTextColor="@color/gray_20">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_birth"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false" />
                </com.google.android.material.textfield.TextInputLayout>


                <TextView
                    android:id="@+id/tv_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/email_address"
                    android:textSize="12sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tl_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxBackgroundColor="@color/white"
                    app:boxCornerRadiusBottomEnd="100dp"
                    app:boxCornerRadiusBottomStart="100dp"
                    app:boxCornerRadiusTopEnd="100dp"
                    app:boxCornerRadiusTopStart="100dp"
                    app:expandedHintEnabled="false"
                    app:placeholderText="@string/placeholder_here"
                    app:placeholderTextColor="@color/gray_20">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:text="@string/sample_email_2"/>
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/tv_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/address"
                    android:textSize="12sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tl_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxBackgroundColor="@color/white"
                    app:boxCornerRadiusBottomEnd="100dp"
                    app:boxCornerRadiusBottomStart="100dp"
                    app:boxCornerRadiusTopEnd="100dp"
                    app:boxCornerRadiusTopStart="100dp"
                    app:expandedHintEnabled="false"
                    app:placeholderText="@string/placeholder_here"
                    app:placeholderTextColor="@color/gray_20">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textLongMessage"
                        android:text="@string/sample_address"/>
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/tv_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/phone_number"
                    android:textSize="12sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tl_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxBackgroundColor="@color/white"
                    app:boxCornerRadiusBottomEnd="100dp"
                    app:boxCornerRadiusBottomStart="100dp"
                    app:boxCornerRadiusTopEnd="100dp"
                    app:boxCornerRadiusTopStart="100dp"
                    app:expandedHintEnabled="false"
                    app:placeholderText="@string/placeholder_here"
                    app:placeholderTextColor="@color/gray_20">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="phone"
                        android:text="@string/sample_phone"/>
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/tv_photo_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/photo_profile"
                    android:textSize="12sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tl_photo_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxBackgroundColor="@color/white"
                    app:boxCornerRadiusBottomEnd="100dp"
                    app:boxCornerRadiusBottomStart="100dp"
                    app:boxCornerRadiusTopEnd="100dp"
                    app:boxCornerRadiusTopStart="100dp"
                    app:endIconDrawable="@drawable/ic_link"
                    app:endIconMode="custom"
                    app:endIconTint="@color/blue_80"
                    app:expandedHintEnabled="false"
                    app:placeholderText="@string/placeholder_here"
                    app:placeholderTextColor="@color/gray_20">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_photo_profile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/tv_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/password"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_note_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/min_8_char_min_1_capital_and_number"
                    android:textSize="12sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tl_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxBackgroundColor="@color/white"
                    app:boxCornerRadiusBottomEnd="100dp"
                    app:boxCornerRadiusBottomStart="100dp"
                    app:boxCornerRadiusTopEnd="100dp"
                    app:boxCornerRadiusTopStart="100dp"
                    app:expandedHintEnabled="false"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/blue"
                    app:placeholderText="@string/placeholder_here"
                    app:placeholderTextColor="@color/gray_20">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:text="@string/sample_password_2"/>
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/tv_confirm_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/confirm_password"
                    android:textSize="12sp" />


                <TextView
                    android:id="@+id/tv_note_confirm_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/make_sure_the_password_matches"
                    android:textSize="12sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tl_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxBackgroundColor="@color/white"
                    app:boxCornerRadiusBottomEnd="100dp"
                    app:boxCornerRadiusBottomStart="100dp"
                    app:boxCornerRadiusTopEnd="100dp"
                    app:boxCornerRadiusTopStart="100dp"
                    app:expandedHintEnabled="false"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/blue"
                    app:placeholderText="@string/placeholder_here"
                    app:placeholderTextColor="@color/gray_20">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_confirm_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:text="@string/sample_password_2"/>
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_register"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/add_users" />

            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />


</androidx.constraintlayout.widget.ConstraintLayout>