<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="24dp"
    android:layout_marginEnd="24dp"
    android:backgroundTint="@color/white"
    app:cardCornerRadius="16dp"
    app:strokeWidth="0dp"
    tools:context=".ui.DetailUserDialogFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/btn_close"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/close_button"
            android:src="@drawable/ic_close" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_user_photo"
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:layout_below="@+id/btn_close"
            android:layout_alignParentStart="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_image"
            app:shapeAppearanceOverlay="@style/RoundedSquare" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_user_photo"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold"
            tools:text="Ghalyatama Ikram Fauzi" />

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_name"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textColor="@color/gray_60"
            android:textSize="10sp"
            android:textStyle="bold"
            tools:text="ghalyatama@bullion.com" />

        <TextView
            android:id="@+id/tv_gender_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_email"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:text="@string/gender"
            android:textColor="@color/gray_60"
            android:textSize="10sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_gender_label"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold"
            tools:text="MALE" />

        <TextView
            android:id="@+id/tv_phone_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_gender"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:text="@string/phone_number"
            android:textColor="@color/gray_60"
            android:textSize="10sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_phone_label"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold"
            tools:text="082182822828" />

        <TextView
            android:id="@+id/tv_birth_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_phone"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:text="@string/date_of_birth"
            android:textColor="@color/gray_60"
            android:textSize="10sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_birth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_birth_label"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold"
            tools:text="14 May 1998" />

        <TextView
            android:id="@+id/tv_address_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_birth"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:text="@string/address"
            android:textColor="@color/gray_60"
            android:textSize="10sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_address_label"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold"
            tools:text="JL Moh Hatta Gg Bunga Emas No.1002 Tanjung Senang, Bandar Lampung" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_edit"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_below="@+id/tv_address"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/edit_user" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone"
            tools:visibility="visible" />

    </RelativeLayout>

</com.google.android.material.card.MaterialCardView>